--- a/Front/Button display/style.css
+++ b/Front/Button display/style.css
@@ -43,7 +43,7 @@ body {
 #display-container {
     display: none;
     position: fixed;
-    top: 0;
+    top: 0px;
     left: 0;
 
     width: 100%;
